<resources>
    <!-- TEXTO GENERAL -->
    <string name="app_name">Comunidad Activa</string>
    <string name="navigation_drawer_open">Abrir navegación</string>
    <string name="navigation_drawer_close">Cerrar navegación</string>
    <string name="nav_header_title">Usuario</string>
    <string name="nav_header_subtitle">usuario@mail.com</string>
    <string name="nav_header_desc">Comunidad Activa</string>
    <string name="action_settings">Settings</string>

    <!-- NAVBAR TEXTO -->
    <string name="menu_home">Ir al inicio</string>
    <string name="menu_notificaciones">Ver Notificaciones</string>
    <string name="menu_activity">Ver actividad reciente</string>
    <string name="menu_password">Cambiar Contraseña</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>

    <!-- REPORTE TEXTO -->
    <string name="titulo">Título</string>
    <string name="descripcion">Descripción del reporte</string>
    <string name="descripcion_reporte">Ingrese una descripción para el nuevo reporte</string>
    <string name="tipo_de_reporte">Tipo de reporte</string>
    <string name="crear_reporte">Crear reporte</string>
    <string name="username_detalle"><u>Username</u></string>
    <string name="cerrar_rep">Cerrar</string>
    <string name="reabrir_reporte">Reabrir</string>
    <string name="abiertos">Abiertos</string>

    <!-- LOGIN -->
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="cambiar_pass">OLVIDE MI CONTRASEÑA</string>

    <!-- REGISTRO -->
    <string name="aceptar">ACEPTAR</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="nombre_usuario">Nombre de Usuario</string>
    <string name="telefono">Telefono</string>
    <string name="fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repetir_contrase_a">Repetir Contraseña</string>
    <string name="tipo_usuario">Tipo de Usuario</string>

    <!-- CAMBIO CONTRASEÑA -->
    <string name="cambiar_pass_titulo">CAMBIAR CONTRASEÑA</string>
    <string name="enviar_codigo">ENVIAR CODIGO</string>
    <string name="verificar_codigo">VERIFICAR CODIGO</string>
    <string name="codigo_verificacion">Codigo de Verificación</string>
    <string name="pass_actual">Contraseña actual</string>
    <string name="nueva_pass">Nueva contraseña</string>
    <string name="confirmar_nueva_pass">Confirmar nueva contraseña</string>


    <string name="seleccionar_ubicaci_n">Seleccionar Ubicación</string>
    <string name="descripcion_prueba">Lorem ipsum dolor sit amet. Hic voluptate incidunt aut perferendis internos ab tenetur necessitatibus ea voluptatibus eaque! Et quia voluptate quo reprehenderit dolorem qui assumenda molestiae aut iure ipsam hic illum rerum et quisquam tenetur.</string>
    <string name="descripcion_prueba2">Lorem ipsum dolor sit amet. Hic voluptate incidunt aut perferendis internos ab tenetur necessitatibus ea voluptatibus eaque!</string>
    <string name="cerrar_reporte">Solicitar Cierre</string>
    <string name="valorar_reporte">Valorar</string>
    <string name="denunciar_reporte">Denunciar</string>
    <string name="ver_reporte">Ver detalle</string>
    <string name="estado_pendiente">Estado: Pendiente</string>

    <!-- PROYECTO TEXTO ( SIGUE DESDE REPORTE TEXTO)-->
    <string name="proyecto">Proyecto</string>
    <string name="descripcion_proyecto">Descripción del Proyecto</string>
    <string name="ingresar_descripcion_proyecto">Ingrese una descripción del proyecto</string>
    <string name="requerimientos_proyecto">Requerimientos del Proyecto</string>
    <string name="ingresar_requerimientos_proyecto">Ingrese los requerimientos del proyecto</string>
    <string name="contacto">Contacto</string>
    <string name="cupo">Cupo</string>
    <string name="ubicacion">Ubicación</string>
    <string name="crear_proyecto">Crear Proyecto</string>
    <string name="buscar___">Buscar...</string>
    <string name="filtro">Filtro</string>
    <string name="error_ocurrido">Ha ocurrido un error.</string>
    <string name="error">Error</string>
    <string name="error_campos_obligatorios">Todos los campos son obligatorios.</string>
    <string name="error_sin_proyectos">Imposible cargar el proyecto especificado.</string>
    <string name="error_sin_cupos">No existen cupos disponibles.</string>
    <string name="error_cambio_no_aceptable">El nuevo estado no es aceptable.</string>
    <string name="error_sin_participantes">No existen participantes para este proyecto.</string>
    <string name="exito_denuncia_proyecto">Denuncia realizada con éxito.</string>
    <string name="exito_estado_proyecto">Estado modificado éxitosamente.</string>
    <string name="exito_confirmacion_proyecto">Esperando confirmación del creador del proyecto.</string>
    <string name="volver">Volver</string>
    <string name="motivo_denunciar_proyecto">Indique el motivo de la denuncia</string>
    <string name="denunciar_proyecto">Denunciar Proyecto</string>
    <string name="unirse_proyecto_titulo">Unirse a Proyecto</string>
    <string name="unirse_proyecto_boton">Unirse</string>
    <string name="abandonar_proyecto_boton">Abandonar</string>
    <string name="actualizar_proyecto_boton">Actualizar</string>
    <string name="unirse_pryecto_deseo">¿Desea unirse al proyecto?</string>
    <string name="actualizar_proyecto">Actualizar Proyecto</string>
    <string name="seleccionar_estado">Seleccione un nuevo estado</string>
    <string name="tipo_proyecto">Tipo de Proyecto</string>
    <string name="estado_proyecto">Estado de Proyecto</string>
    <string name="rellenar_antes_de_mostrar">Rellenar antes de Mostrar</string>
    <string name="ver_detalle">Ver Detalle</string>
    <string name="ingresar_titulo_denuncia_proyecto">Ingrese un titulo para su denuncia.</string>
    <string name="ingresar_descripcion_denuncia_proyecto">Ingrese una descripción para su denuncia.</string>
    <string name="boton_denunciar">Denunciar</string>

    <string name="usuario_creador">Creador</string>

    <string name="filtrar_tipo">Filtrar: Tipo</string>
    <string name="filtrar_estado">Filtrar: Estado</string>

    <string name="ver_denuncia">Ver Denuncia</string>


    <!-- Admin -->
    <string name="listar_usuarios_titulo">Listar Usuarios</string>
    <string name="ver_detalle_del_usuario">Ver detalle del usuario</string>
    <string name="detalles_del_usuario">Detalles del usuario</string>
    <string name="creaci_n_de_cuenta">Creación de cuenta</string>
    <string name="ultimo_bloqueo">Último bloqueo</string>
    <string name="datos_personales">Datos personales</string>
    <string name="notificar">Notificar</string>
    <string name="suspender">Suspender</string>

    <!-- NAVBAR MODERADOR -->
    <string name="moderador_home">PANEL MODERADOR</string>
    <string name="fecha_inicio">Fecha Inicio</string>
    <string name="fecha_fin">Fecha Fin</string>
    <string name="tipo_informe">Tipo de Informe</string>
    <string name="crear_informe">Crear Informe</string>
    <string name="lista_denunci">Listado Denuncias</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descripcion_cierre">Motivo del cierre</string>
    <string name="descripcion_hint_cierre">Describa el motivo del cierre</string>
    <string name="agregar_imagen">Agregar imagen</string>
    <string name="solicitar_cierre">Solicitar cierre</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="titulo_denuncia">Ingresar titulo de la denuncia</string>
    <string name="motivo_denuncia">Motivo</string>
    <string name="denuncia_descripcion">Ingrese una descripción de la denuncia</string>
    <string name="denuncia_reporte_titulo">Denunciar reporte</string>
    <string name="buscar_reportes">Buscar reportes</string>
    <string name="ayuda">Ayuda</string>
    <string name="accesibilidad">Accesibilidad</string>


    <string name="notificaciones_pendientes">NOTIFICACIONES PENDIENTES</string>
    <string name="generar_informe">GENERAR INFORME</string>
    <string name="actividad_reciente">ACTIVIDAD RECIENTE</string>
    <string name="eliminar">Eliminar</string>
    <string name="desea_eliminar_el_usuario">¿Desea eliminar el usuario?</string>
    <string name="esta_acci_n_no_se_puede_deshacer">Esta acción no se puede deshacer!</string>
    <string name="crear_informe_admin">CREAR INFORME</string>
    <string name="fecha_inicio_informe_admin">Desde</string>
    <string name="fecha_fin_informe_admin">Hasta</string>
    <string name="usuarios_activos_por_rol">USUARIOS ACTIVOS POR ROL</string>
    <string name="usuarios_nuevos">USUARIOS NUEVOS</string>
    <string name="usuarios_por_estado">USUARIOS POR ESTADO</string>
    <string name="reportes_por_categoria">REPORTES POR CATEGORIA</string>
    <string name="proyectos_por_categoria">PROYECTOS POR CATEGORIA</string>
    <string name="editar_usuario">Editar Usuario</string>
    <string name="nueva_contrase_a">Nueva Contraseña</string>
    <string name="repita_la_contrase_a">Repita la Contraseña</string>
    <string name="solo_se_modificaran_los_datos_completados">solo se modificaran los datos completados</string>
    <string name="datos_del_publicante">Datos del publicante</string>
    <string name="lista_de_participantes">Lista de participantes</string>
    <string name="remover_participante">Remover participante</string>
    <string name="finalizar">Finalizar</string>
    <string name="preg_nueve">+ ¿Cómo denunciar una publicación?</string>
    <string name="preg_ocho">+ ¿Cómo funciona el sistema de puntos?</string>
    <string name="preg_siete">+ ¿Cómo finalizar un proyecto?</string>
    <string name="preg_seis">+ ¿Cómo unirse a un proyecto?</string>
    <string name="preg_cinco">+ ¿Cómo crear un proyecto?</string>
    <string name="preg_cuatro">+ ¿Cómo cerrar un reporte?</string>
    <string name="preg_tres">+ ¿Cómo atender un reporte?</string>
    <string name="preg_dos">+ ¿Cómo valorar un reporte?</string>
    <string name="preg_uno">+ ¿Cómo hacer un reporte?</string>
    <string name="cerrar_x">X</string>
    <string name="ver_imagen">Ver Detalle</string>
    <string name="ver_publicaci_n">Ver publicación</string>
    <string name="acciones_de_moderacion_recientes">ACCIONES DE MODERACION RECIENTES</string>
    <string name="cupo_proyecto">Cupo Proyecto</string>
    <string name="estado_proyecto_list">Estado proyecto</string>
    <string name="iniciar">Iniciar</string>
    <string name="abandonar">Abandonar</string>
</resources>