<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/dialog_corner_bg"
    android:paddingHorizontal="15dp"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:text="@string/denuncia_reporte_titulo"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        android:text="@string/titulo"
        />
    <EditText
        android:id="@+id/etxTituloDenuncia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="35dp"
        android:textSize="20sp"
        android:padding="5dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/titulo_denuncia"
        android:background="@drawable/edittext_white_rounded"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/motivo_denuncia"
        android:textSize="18sp"
        android:layout_marginVertical="5dp"
        android:gravity="start"/>
    <EditText
        android:id="@+id/etxDescripcionDenuncia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="120dp"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        android:inputType="textMultiLine"
        android:lines="5"
        android:hint="@string/denuncia_descripcion"
        android:gravity="top"
        android:textAlignment="gravity"
        android:padding="4dp"
        android:background="@drawable/edittext_white_rounded"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btnConfirmarDenuncia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:paddingHorizontal="20dp"
            android:background="@drawable/boton_redondeado"
            android:text="@string/confirmar" />

        <Button
            android:id="@+id/btnCancelarDenuncia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:paddingHorizontal="20dp"
            android:background="@drawable/boton_redondeado_danger"
            android:text="@string/cancelar" />
    </LinearLayout>

</LinearLayout>
