<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_100"
    tools:context=".ui.fragments.DetalleProyectoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_detalle_proyecto_titulo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/titulo"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/txt_detalle_proyecto_estado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="30dp"
            android:gravity="center"
            android:padding="10dp"
            android:textStyle="bold"
            android:background="@drawable/border_text"
            android:text="@string/estado_proyecto"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_detalle_proyecto_owner"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/boton_redondeado"
            android:text="@string/datos_del_publicante" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/black"
            android:layout_marginVertical="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="start"
            android:text="@string/descripcion_proyecto"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_detalle_proyecto_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginHorizontal="10dp"
            android:textSize="16sp"
            android:padding="7dp"
            android:textStyle="italic"
            android:background="@drawable/edittext_white_rounded"
            android:text="@string/descripcion_prueba"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:gravity="center"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/tipo_proyecto"
                android:layout_marginHorizontal="10dp"
                android:textSize="20sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cupo"
                android:textStyle="bold"
                android:layout_marginHorizontal="10dp"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp">
            <TextView
                android:id="@+id/txt_detalle_proyecto_tipo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="Tipo"
                android:layout_marginHorizontal="10dp"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/txt_detalle_proyecto_cupo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Cantidad"
                android:layout_marginHorizontal="10dp"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_detalle_proyecto_participantes"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/boton_redondeado"
            android:text="@string/lista_de_participantes" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginHorizontal="10dp"
            android:textSize="20sp"
            android:text="@string/requerimientos_proyecto"/>

        <TextView
            android:id="@+id/txt_detalle_proyecto_requisitos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginHorizontal="10dp"
            android:textSize="16sp"
            android:padding="7dp"
            android:textStyle="italic"
            android:layout_marginVertical="5dp"
            android:background="@drawable/edittext_white_rounded"
            android:text="@string/descripcion_prueba2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginHorizontal="10dp"
            android:textSize="20sp"
            android:text="@string/contacto"/>

        <TextView
            android:id="@+id/txt_detalle_proyecto_contacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginHorizontal="10dp"
            android:textSize="16sp"
            android:padding="7dp"
            android:textStyle="italic"
            android:layout_marginVertical="5dp"
            android:background="@drawable/edittext_white_rounded"
            android:text="@string/descripcion_prueba2" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/black"
            android:layout_marginVertical="10dp"/>
        <fragment
            android:id="@+id/map_proyecto"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:paddingVertical="5dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/black"
            android:layout_marginVertical="10dp"/>
        <Button
            android:id="@+id/btn_detalle_proyecto_unirse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/boton_redondeado"
            android:text="@string/unirse_proyecto_boton"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
            <Button
            android:id="@+id/btn_detalle_proyecto_finalizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/boton_redondeado_danger"
            android:text="@string/finalizar"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
        </LinearLayout>


</ScrollView>