<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="15dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/dialog_corner_bg"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/dialog_titulo_eliminar_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/desea_eliminar_el_usuario"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/esta_acci_n_no_se_puede_deshacer"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnConfirmarEliminarUsuario"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:paddingHorizontal="10dp"
            android:background="@drawable/boton_redondeado"
            android:text="@string/confirmar" />

        <Button
            android:id="@+id/btnCancelarEliminarUsuario"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:paddingHorizontal="10dp"
            android:background="@drawable/boton_redondeado_danger"
            android:text="@string/cancelar" />
    </LinearLayout>

</LinearLayout>
